--- a/usersearch/src/App.css
+++ b/usersearch/src/App.css
@@ -1,28 +1,25 @@
+body {
+	background-color: #ffe892;
+}
+
 .App {
-  text-align: center;
+	margin: 20px auto 40px;
+	width: 80%;
+	max-width: 1000px;
+	border: 1px solid #6d83ec;
+	background-color: #f7f5f5;
+	border-radius: 8px;
+	overflow: hidden;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+	animation: App-logo-spin infinite 20s linear;
+	height: 80px;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
 
-.App-title {
-  font-size: 1.5em;
-}
 
-.App-intro {
-  font-size: large;
-}
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
+
+
+
